--- a/posts/the-books/2023-10-27-drug-mind-yang.qmd
+++ b/posts/the-books/2023-10-27-drug-mind-yang.qmd
@@ -5,22 +5,31 @@ author: "JS HUHH"
 date: "10/27/2023"
 image: "./images/book-cat-2.webp"
 categories: [the-books]
+#fig-align: center
+#jupyter: python3
+draft: false
+format:
+  html:
+    code-line-numbers: true
+    highlight-style: arrow
 filters:
    - lightbox
+   #- line-highlight
 lightbox: auto
-draft: false
 ---
-::: {layout="[[20,-1, 50]]"}
+
+::: columns
+::: {.column width="30%"}
 ## The Book
 [![](https://image.aladin.co.kr/product/32626/17/cover500/e432532385_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=326261783)
+:::
 
-::::{layout="[1]"}
+::: {.column width="70%"}
 ## TL; DR
 - 마약의 이모저모를 잘 알려주긴 한다. 
 - 의사로서의 전문 지식은 책의 장점이지만, 마약의 모든 것을 포괄하려는 욕심은 과했다. 
-::::
 :::
-
+:::
 
 ## 넋두리
 
