--- a/posts/the-books/2023-10-27-drug-mind-yang.qmd
+++ b/posts/the-books/2023-10-27-drug-mind-yang.qmd
@@ -24,10 +24,13 @@ lightbox: auto
 [![](https://image.aladin.co.kr/product/32626/17/cover500/e432532385_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=326261783)
 :::
 
-::: {.column width="70%"}
+:::{.column width="5%"}
+:::
+
+::: {.column width="65%"}
 ## TL; DR
 - 마약의 이모저모를 잘 알려주긴 한다. 
-- 의사로서의 전문 지식은 책의 장점이지만, 마약의 모든 것을 포괄하려는 욕심은 과했다. 
+- 의사로서의 전문 지식은 책의 장점, 마약의 모든 것을 담으려는 욕심은 과했다. 
 :::
 :::
 
