--- a/posts/the-books/2023-10-27-drug-mind-yang.qmd
+++ b/posts/the-books/2023-10-27-drug-mind-yang.qmd
@@ -45,7 +45,7 @@ lightbox: auto
 ## 챙길 대목들
 ### 신경전달물질
 
-마약은 신경전달물질을 통해서 작용한다. 신경전달물질이 스탭스의 수용체에 달라붙어 효과를 낸다. 저자가 제시한 핵심 신경전달물질을 살펴보자. 
+마약은 신경전달물질을 통해서 작용한다. 신경전달물질이 시냅스의 수용체에 달라붙어 효과를 낸다. 저자가 제시한 핵심 신경전달물질을 살펴보자. 
 
 - **아세틸콜린**: 가장 기본적인 물질이다. 전화벨과 같다고 한다. 뭘 해야 하는지 알려주는 신호 역할을 한다는 의미로 이해하면 될까? "이 아세틸콜린이 줄어들면 뇌의 모든 기능, 그 중에서도 지식과 정보를 받아들여 저장하고 판단하는 인지 기능에 이상이 생긴다. 바로 알츠하이머 치매다."
 
