--- a/posts/the-lectures/2024-02-15-statquest-seq2seq.qmd
+++ b/posts/the-lectures/2024-02-15-statquest-seq2seq.qmd
@@ -26,8 +26,7 @@ format:
 
 ## 넋두리 
 
-이제서야 비로소 현대까지 온 느낌이다. Seq2Seq 모델은 이쪽의 정보를 압축해서 저쪽에 보내고 이를 다시 저쪽의 맥락에서 푸는 것을 의미한다. 전형적으로 '번역'의 사례를 생각하면 되겠다. 강의의 사례 역시 영어 "Let's go!"를 스페인어 "Vamos!"로 번역하는 과정을 예시로 들고 있다. 
-
+이제서야 비로소 '현대'까지 온 느낌이다. Seq2Seq 모델은 이쪽의 정보를 압축해서 저쪽에 보내고 이를 다시 저쪽의 맥락에서 풀어내는 것을 의미한다. 전형적으로 '번역'을 생각하면 되겠다. 강의 역시 영어 "Let's go!"를 스페인어 "Vamos!"로 번역하는 과정을 예시로 들고 있다. 
 
 ## Context Vector
 
