--- a/posts/the-lectures/2024-02-15-statquest-seq2seq.qmd
+++ b/posts/the-lectures/2024-02-15-statquest-seq2seq.qmd
@@ -26,16 +26,16 @@ format:
 
 ## 넋두리 
 
-이제서야 비로소 '현대'까지 온 느낌이다. Seq2Seq 모델은 이쪽의 정보를 압축해서 저쪽에 보내고 이를 다시 저쪽의 맥락에서 풀어내는 것을 의미한다. 전형적으로 '번역'을 생각하면 되겠다. 강의 역시 영어 "Let's go!"를 스페인어 "Vamos!"로 번역하는 과정을 예시로 들고 있다. 
+비로소 (트랜스포머까지 이르는) '목전'까지 온 느낌이다. Seq2Seq 모델은 이쪽의 정보를 압축해서 저쪽에 보내고 이를 다시 저쪽의 맥락에서 풀어내는 것을 의미한다. 전형적으로 '번역'을 생각하면 되겠다. 강의 역시 영어 "Let's go!"를 스페인어 "Vamos!"로 번역하는 과정을 예시로 들고 있다. 
 
 ## Context Vector
 
 인코딩 파트의 그림을 잘 보자. 몇 가지 요소들을 확인할 수 있다. 
 
 - 맨 아래 워드 임베딩이 포함되어 있음을 알 수 있다. 이는 언어를 숫자로 바꾸는 과정이다. 
-- LSTM은 두 개의 레이어로 이루어져 있고, 각 레이어의 셀은 2개로 구성되어 있다. 
+- LSTM은 두 개의 레이어로 이루어져 있고, 각 레이어의 셀(노드)은 2개로 구성되어 있다. 
 
-이렇게 인코딩을 통해 만들어진 정보를 컨텍스트 벡터라고 부른다. 이 녀석을 활용해서 디코더에 초기값을 부여한다.
+이렇게 인코딩을 통해 만들어진 정보를 컨텍스트 벡터라고 부른다. 이 녀석을 활용해서 디코더에 초깃값을 부여한다.
 
 ::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
 ![인코더 만들기](./images/seq2seq/01.png){ style="border: 1px solid #000;" }
